@@ -51,6 +51,25 @@ to this file based on your experience, please contribute a patch or drop
 us a note on ns-developers mailing list.</p>
 
 <hr>
+<h1>Changes from ns-3.31 to ns-3.32</h1>
+<h2>New API:</h2>
+<ul>
+<li></li>
+</ul>
+<h2>Changes to existing API:</h2>
+<ul>
+<li></li>
+</ul>
+<h2>Changes to build system:</h2>
+<ul>
+<li></li>
+</ul>
+<h2>Changed behavior:</h2>
+<ul>
+<li></li>
+</ul>
+
+<hr>
 <h1>Changes from ns-3.30 to ns-3.31</h1>
 <h2>New API:</h2>
 <ul>
